fix cutoff

--- a/enterprise/app/code/code.css
+++ b/enterprise/app/code/code.css
@@ -37,7 +37,7 @@
 
 .xrefs-container {
   overflow-y: auto;
-  height: 100%;
+  height: 85%;
 }
 
 .xrefs-file {
